--- a/day19/day19.html
+++ b/day19/day19.html
@@ -34,29 +34,81 @@
     </div>
 </div>
 <script>
+    /*未使用高级选择器*/
+    {
+        function getAllListItem() {
+            // 返回页面中所有li标签
+          return  document.getElementsByTagName('li');
+        };
 
-    function getAllListItem() {
-        // 返回页面中所有li标签
-      return  document.getElementsByTagName('li');
-    };
+        function findAllHtmlSpanInOneSection(sectionId) {
+            // 返回某个section下所有span中内容为HTML的span标签
+            var sec=document.getElementById('sectionId');
+            var sp=sec.getElementsByTagName('span');
 
-    function findAllHtmlSpanInOneSection() {
-        // 返回某个section下所有span中内容为HTML的span标签sectionId
-        var sec=document.getElementById('news-top');
-       console.log(sec.getElementsByTagName('ul').innerHTML);
+        for(var i=0;i<sp.length;i++) {
+            if(sp[i].innerHTML=='HTML'){
+                console.log (sp[i]);
+            }
+        }
+        };
 
-    };
+        function findListItem(sectionId, spanCont) {
+            // 返回某个section下，所有所包含span内容为spanCont的LI标签
+            var sec=document.getElementById('sectionId');
+            var sp=sec.getElementsByTagName('span');
 
-    function findListItem(sectionId, spanCont) {
-        // 返回某个section下，所有所包含span内容为spanCont的LI标签
+            for(var i=0;i<sp.length;i++) {
+                if(sp[i].innerHTML=='spanCont'){
+                    return sp[i];
+                }
+            }
+
+        };
+
+         function getActiveLinkContent() {
+            // 返回某个section下，class为active的链接中包含的文字内容
+          return document.getElementById('news-normal').getElementsByClassName('active')[0].innerHTML;
+        };
 
     }
 
-      function getActiveLinkContent() {
-        // 返回某个section下，class为active的链接中包含的文字内容
-      return document.getElementById('news-normal').getElementsByClassName('active')[0].innerHTML;
-    };
 
+/*使用querySelector及querySelectorAll*/
+
+    {
+        function getAllListItem() {
+            // 返回页面中所有li标签
+            console.log(document.querySelectorAll('li'));
+        }
+
+        function findAllHtmlSpanInOneSection() {
+            // 返回某个section下所有span中内容为HTML的span标签
+            var sec = document.querySelector('#news-top');
+            var sp = sec.querySelectorAll('span');
+            for (var i = 0; i < sp.length; i++) {
+                if (sp[i].innerHTML === 'HTML') {
+                    console.log(sp[i]);
+                }
+            }
+        };
+
+        function findListItem(sectionId, spanCont) {
+            // 返回某个section下，所有所包含span内容为spanCont的LI标签
+            var sec = document.querySelector('#sectionId');
+            var sp = sec.querySelectorAll('span');
+            for (var i = 0; i < sp.length; i++) {
+                if (sp[i].innerHTML === 'spanCont') {
+                    console.log(sp[i]);
+                }
+            }
+        }
+
+        function getActiveLinkContent(sectionId) {
+            // 返回某个section下，class为active的链接中包含的文字内容
+            return document.querySelector('#sectionId').querySelectorAll('.active')[0].innerHTML;
+        }
+    }
 </script>
 </body>
 </html>
