--- a/day 20/js_20_5.html
+++ b/day 20/js_20_5.html
@@ -20,9 +20,58 @@
     */
     var btn=document.getElementById('fade-btn');
     var obj=document.getElementById('fade-obj');
-    btn.onclick=function () {
-
+    obj.style.opacity=1;
+    function slideOut () {
+        var opac = parseFloat(obj.style.opacity);
+        if (opac === 0) {
+            //    动画结束后，按钮可点击，且变为"淡入"
+            btn.disabled=false;
+            btn.innerHTML='淡入';
+            //再按按钮 实现淡入功能
+            btn.onclick=function () {
+                slideIn();
+            };
+            return true;
+        }
+        if (opac !== 0) {
+            opac = opac - 0.1;
+            //    动画过程中 按钮不可使用
+            btn.disabled=true;
+        }
+        obj.style.opacity = opac;
+       //利用setTimeout来展示动画
+        setTimeout(slideOut,50);
     }
+    function slideIn(){
+        var opac = parseFloat(obj.style.opacity);
+        if (opac === 1) {
+            //    动画结束后，按钮可点击，且变为"淡入"
+            btn.disabled=false;
+            btn.innerHTML='淡出';
+            //按按钮 实现淡出功能
+            btn.onclick=function () {
+                slideOut();
+            };
+            return true;
+        }
+        if (opac !==1) {
+            opac = opac + 0.1;
+            //    动画过程中 按钮不可使用
+            btn.disabled=true;
+        }
+        obj.style.opacity = opac;
+        //利用setTimeout来展示动画
+        setTimeout(slideIn ,50);
+    }
+ btn.onclick=function () {
+     slideOut();
+
+ }
+
+
+
+
+
 
 </script>
 </body>
