--- a/day 17-18/js_17-18.html
+++ b/day 17-18/js_17-18.html
@@ -7,8 +7,8 @@
 <body>
 <div>
 四则运算
-    <input id="first-number" type="number" value="0" placeholder="第一个数字">
-    <input id="second-number"  type="number" value="0" placeholder="第二个数字">
+    <input id="first-number"  value="0" placeholder="第一个数字">
+    <input id="second-number"   value="0" placeholder="第二个数字">
     <button id="add-btn">加</button>
     <button id="minus-btn">减</button>
     <button id="times-btn">乘</button>
@@ -28,50 +28,60 @@
     var fn=document.getElementById('first-number');
     var sn=document.getElementById('second-number');
     var result=document.getElementById('result');
-
-    document.getElementById('add-btn').onclick=function () {
-
-        result.innerHTML = Number(fn.value) + Number(sn.value);
-
-
-    };
-    document.getElementById('minus-btn').onclick=function () {
-
-        result.innerHTML=Number(fn.value)-Number(sn.value);
-    };
-    document.getElementById('times-btn').onclick=function () {
-        result.innerHTML=Number(fn.value)*Number(sn.value);
-    };
-    document.getElementById('divide-btn').onclick=function () {
-        if (Number(sn.value)!==0) {
-            result.innerHTML = Number(fn.value) / Number(sn.value);
-        }else{
-            console.log('error!can\'t be zero');
+    //判断是否位数字
+    //  if(!isNaN(fn.value)&&!isNaN(sn.value)) {
+        document.getElementById('add-btn').onclick = function () {
+            if (!isNaN(fn.value) && !isNaN(sn.value)) {
+                result.innerHTML = Number(fn.value) + Number(sn.value);
+            } else {
+                alert('not a number');
+            }
         }
-    };
 
 
 
+        document.getElementById('minus-btn').onclick = function () {
+            if (!isNaN(fn.value) && !isNaN(sn.value)) {
+                  result.innerHTML = Number(fn.value) - Number(sn.value);
+            } else {
+                alert('not a number');
+            }
+        };
+        document.getElementById('times-btn').onclick = function () {
+            if (!isNaN(fn.value) && !isNaN(sn.value)) {
+                 result.innerHTML = Number(fn.value) * Number(sn.value);
+        } else {
+        alert('not a number');
+    }
+        };
+        document.getElementById('divide-btn').onclick = function () {
+            if (!isNaN(fn.value) && !isNaN(sn.value)) {
+                if (Number(sn.value) !== 0) {
+                    result.innerHTML = Number(fn.value) / Number(sn.value);
+                } else {
+                    console.log('error!can\'t be zero');
+                }
+            } else {
+                alert('not a number');
+            }
+        }
+
+ /*   }else{
+        alert('not a number');
+    }*/
 
     /*对2求余*/
     function dec2bin(decNumber) {
-        var btn=document.getElementById('trans-btn');
-         btn.onclick=function () {
+        // 在这里实现你的转化方法，注意需要判断输入必须为一个非负整数
 
-         var dec = decNumber.value;
-         var bin = '';
-         // 在这里实现你的转化方法，注意需要判断输入必须为一个非负整数
-         if (dec >= 0) {
-             if (dec % 2 != 0) {
-                 bin = '1' + bin;
-             } else {
-                 bin = '0' + bin;
-             }
-             dec = parseInt(dec / 2);
-         }
-         document.getElementById('result1').innerHTML = bin;
-     }
     }
+
+    // 实现党点击转化按钮时，将输入的十进制数字转化为二进制，并显示在result的p标签内
+    // Some coding
+    var btn=document.getElementById('trans-btn');
+    var i_text=document.getElementById('dec-number');
+    var result1=document.getElementById('result1');
+    btn.onclick=dec2bin(i_text.value);
 
 
 </script>
