--- a/JS/day 17-18/dec-2-bin.html
+++ b/JS/day 17-18/dec-2-bin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>dec2bin</title>
 </head>
 <body>
 <!--对2求与把10进制转换为2进制-->
