--- a/HTML+CSS/Day9-11/css_day9-11.html
+++ b/HTML+CSS/Day9-11/css_day9-11.html
@@ -23,7 +23,6 @@
 </header>
 
 
-
 <div class="feature">
     <div class="f-title">
         <h5>BOATLOADS OF AWESOME</h5>
@@ -31,20 +30,20 @@
     </div>
 
     <div class="f-feature-left">
-            <div class="f-top">
-                <img src="./imgs/Iphone%20Icon.png" alt="">
-                <div class="f-description">
-                    <p class="feature-title">Mobile First</p>
-                    <p class="feature-description">All modulz are built mobile-first for maximum<br>device compatibility</p>
-                </div>
+        <div class="f-top">
+            <img src="./imgs/Iphone%20Icon.png" alt="">
+            <div class="f-description">
+                <p class="feature-title">Mobile First</p>
+                <p class="feature-description">All modulz are built mobile-first for maximum<br>device compatibility</p>
             </div>
-            <div class="f-bottom">
-                <img src="./imgs/Pencil%20Icon.png" alt="">
-                <div class="f-description">
-                    <p class="feature-title">Accessibility</p>
-                    <p class="feature-description">On different screen sizes,fonts automagically<br>scale with the viewpoint</p>
-                </div>
+        </div>
+        <div class="f-bottom">
+            <img src="./imgs/Pencil%20Icon.png" alt="">
+            <div class="f-description">
+                <p class="feature-title">Accessibility</p>
+                <p class="feature-description">On different screen sizes,fonts automagically<br>scale with the viewpoint</p>
             </div>
+        </div>
     </div>
 
     <div class="f-feature-right">
@@ -73,7 +72,7 @@
     <div class="a-left">
         <p id="a-title">Supportive policies<br>for China's smart<br>car</p>
         <p id="a-descripton">China will come up with its own smart car<br>standards,traffic rules,laws and regulations<br>
-        relating to safty.according to the China<br> Industry Innovation ALLiance for the intelli-<br>gent and Connected Vehicles</p>
+            relating to safty.according to the China<br> Industry Innovation ALLiance for the intelli-<br>gent and Connected Vehicles</p>
         <button>CHECK OUT FRATURES</button>
         <button>TRY PRODUCT FOR FREE</button>
 
@@ -83,6 +82,55 @@
     </div>
 
 </div>
+
+
+<div class="product">
+    <p id="p-title">Try Our Awesome Product</p>
+    <div class="p-description">
+        <div class="singleton">
+            <img src="./imgs/Singleton.png" alt="">
+            <p>Li Jun,a China Academy of Engi-neering academician and also director of the alliance's experts' committee.
+                side that China will also launch design guidance for smart cars,smart map architec-true and standards for test grounds</p>
+        </div>
+        <div class="hero">
+            <img src="./imgs/Hero.png" alt="">
+            <p>Li said the smart car industry is able to enlarge the current car industry by 1 trillion yuan($158.15 billion)and
+                also able to boost fast development in 5G,internet of cars,big data,artificial intellgence and new-energy vehicles.</p>
+        </div>
+        <div class="pontland">
+            <img src="./imgs/Portland.png" alt="">
+            <p>Zhang Junyi.a partner with NIO Capital. said that the smart car is the trend for the car industry and china's auto sector will
+                usher in a new key development stage with the improvement of infrastructure technology, policies and laws</p>
+        </div>
+    </div>
+</div>
+
+
+<div class="bussiness">
+    <div class="b-main">
+        <img src="./imgs/pic1.png" alt="" style="width: 487px;float: left">
+        <div class="b1-description">
+            <p class="b-title">Learn How to Improve Your <br>Personal Bussiness</p>
+            <p class="b-des">Li Jun,a China Academy of Engi-neering academician and also director of the alliance's experts' committee.
+            side that China will also launch design guidance for smart cars,smart map architec-true and standards for test grounds</p>
+        </div>
+
+        <img src="./imgs/pic4.png" alt="" style="width:498px;float: right;margin-left: 50px">
+        <div class="b2-description">
+            <p class="b-title">Choose Between Two Beautifully Designed Color Schemes</p>
+            <p class="b-des">China will come up with its own smart car standards,traffic rules,laws and regulations
+            relating to safty.according to the China Industry Innovation ALLiance for the intelligent and Connected Vehicles</p>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
 
 
 
