--- a/HTML+CSS/Day9-11/css_day9-11.html
+++ b/HTML+CSS/Day9-11/css_day9-11.html
@@ -126,6 +126,66 @@
 
 
 
+<div class="team">
+    <div class="t-description">
+        <p class="t-title">Our Awesome Crew</p>
+        <p class="t-des">Our unique online teaching style makes learning easy for everyone,whether you<br>
+        are trying to land a new job,brush up on your skills</p>
+    </div>
+    <div class="team-pic">
+        <div class="t-contact">
+
+            <img src="./imgs/Background%203.png" alt="" id="t-contact">
+            <p style="font-size: 18px;color: white">Ethan Dutton</p>
+            <p style="font-size: 11px;color: lightgrey">SENIOR VISUAL DESIGNER</p>
+            <div class="t-media">
+                <img src="./imgs/Facebook%20Icon.png" alt="">
+                 <img src="./imgs/Twitter%20Icon.png" alt="">
+                  <img src="./imgs/Instagram%20Icon.png" alt="">
+            </div>
+
+        </div>
+        <img src="./imgs/person1.png" alt="">
+        <img src="./imgs/person2.png" alt="">
+        <img src="./imgs/person3.png" alt="">
+        <img src="./imgs/person4.png" alt="">
+    </div>
+</div>
+
+
+
+<div class="contact">
+    <div class="c-left">
+        <p style="font-size: 18px;padding: 40px 0">FELL FREE TO WRITE US</p>
+        <input type="text" placeholder="E-mail">
+        <input type="text" placeholder="Subject">
+        <input type="text" placeholder="Message" id="message">
+        <button>SEND</button>
+    </div>
+    <div class="c-right">
+        <p style="font-size: 40px;padding-bottom: 80px">Contacts</p>
+        <div class="c-contact">
+            <div>
+                <img src="./imgs/Map%20Icon.png" alt="">
+                <p>320 King Street<br>Feastrvale Trevose,PA 19057</p>
+            </div>
+             <div>
+                <img src="./imgs/Phone%20Icon.png" alt="">
+                <p>(755)564-84-12</p>
+            </div>
+             <div>
+                <img src="./imgs/Mail%20Icon.png" alt="">
+                <p>youname@mail.com</p>
+            </div>
+
+
+
+
+        </div>
+    </div>
+</div>
+
+
 
 
 
@@ -168,7 +228,14 @@
     <div class="enjoy">
         <p>ENJOY YOUR LIFR</p>
         <p style="color: grey">Creat web UI kit for designers,<br>freelancers or bussiness</p>
-
+        <div class="e-media">
+            <a href="#"><img src="./imgs/Twitter%20Icon.png" alt=""></a>
+            <a href="#"><img src="./imgs/Facebook%20Icon.png" alt=""></a>
+            <a href="#"><img src="./imgs/Google%20Icon.png" alt=""></a>
+            <a href="#"><img src="./imgs/Tumbler%20Icon.png" alt=""></a>
+            <a href="#"><img src="./imgs/Pinterest%20Icon.png" alt=""></a>
+            <a href="#"><img src="./imgs/LinkedIn%20Icon.png" alt=""></a>
+        </div>
     </div>
 
 
