--- a/HTML+CSS/Day9-11/css_day9-11.html
+++ b/HTML+CSS/Day9-11/css_day9-11.html
@@ -17,7 +17,7 @@
         <h3>CREATE YOUR ACCOUNT</h3>
         <p>IT IS ABSOLUTELY FREE</p>
         <input type="text" placeholder="denis@getcraftwork.com">
-        <input type="text" placeholder="Create your password">
+        <input type="password" placeholder="Create your password">
         <button>SIGN UP</button>
     </div>
 </header>
