--- a/JS/day25_27/code_1.html
+++ b/JS/day25_27/code_1.html
@@ -11,12 +11,13 @@
     }
 
     function GoSteps(n) {
+
         if ( n<=0){
             console.log('0次');
         }
-         if(n===null){
+/*         if(n===null){
              Go();
-         }
+         }*/
           if(n>0){
            for(n;n>0;n--){
                 Go();
