--- a/IFE2018/JS/day20-21/js_20_6.html
+++ b/IFE2018/JS/day20-21/js_20_6.html
@@ -30,7 +30,7 @@
     //笑容逐渐开始
     function simleOn() {
         var ypos=parseInt(er.style.top);
-        if (ypos==-7680){
+        if (ypos===-7680){
             simleOff();
             return true;
         }
