--- a/JS-DOM/综合例子/contact.html
+++ b/JS-DOM/综合例子/contact.html
@@ -26,17 +26,17 @@
         <fieldset>
             <p>
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Your name" required="required" />
+                <input type="text" id="name" name="name" placeholder="Your name"  />
 
             </p>
             <p>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Your email address" required="required" />
+                <input type="email" id="email" name="email" placeholder="Your email address" />
 
             </p>
             <p>
                 <label for="message">Message:</label>
-                <textarea cols="45" rows="7" id="message" name="message" required="required" placeholder="Write your message here."></textarea>
+                <textarea cols="45" rows="7" id="message" name="message"  placeholder="Write your message here."></textarea>
 
             </p>
             <input type="submit" value="Send" />
